--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "zod": "3.22.2"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.8.0",
+    "eslint": "8.50.0",
     "tsup": "7.2.0",
     "tsx": "3.13.0",
     "typescript": "5.2.2"
