--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node dist/server.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest --coverage",
     "build": "tsup src"
   },
   "keywords": [],
@@ -22,10 +25,12 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcryptjs": "2.4.4",
     "@types/node": "20.8.0",
+    "@vitest/coverage-v8": "0.34.6",
     "eslint": "8.50.0",
     "prisma": "5.3.1",
     "tsup": "7.2.0",
     "tsx": "3.13.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "vitest": "0.34.6"
   }
 }
