--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui",
     "build": "tsup src"
   },
   "keywords": [],
@@ -26,6 +27,7 @@
     "@types/bcryptjs": "2.4.4",
     "@types/node": "20.8.0",
     "@vitest/coverage-v8": "0.34.6",
+    "@vitest/ui": "0.34.6",
     "eslint": "8.50.0",
     "prisma": "5.3.1",
     "tsup": "7.2.0",
