--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
   "rules": {
     "import/order": ["error", {"alphabetize": {"order": "asc"}}],
     "camelcase": "off",
-    "no-useless-constructor": "off"
+    "no-useless-constructor": "off",
+    "no-undef": "off"
   },
   "settings": {
     "import/resolver": {
