--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "vitest run --dir src/services",
     "pretest:e2e": "./setup-environment-test.sh",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest watch --dir src/http",
     "test:watch": "vitest --dir src/services",
     "test:coverage": "vitest --coverage",
     "test:ui": "vitest --ui",
@@ -30,10 +31,12 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcryptjs": "2.4.4",
     "@types/node": "20.8.0",
+    "@types/supertest": "2.0.14",
     "@vitest/coverage-v8": "0.34.6",
     "@vitest/ui": "0.34.6",
     "eslint": "8.50.0",
     "prisma": "5.3.1",
+    "supertest": "6.3.3",
     "tsup": "7.2.0",
     "tsx": "3.13.0",
     "typescript": "5.2.2",
